refactor: update application properties for H2 and MySQL configurations